--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -409,7 +409,8 @@ jobs:
           Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value "## Publish`n"
           Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value "### GitHub Feed`n"
           
-          Write-Output "NUGET_SOURCE=https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          $env:NUGET_SOURCE = "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
+          
 
           if (-not (Test-Path -Path ".\output\*.nupkg")) {
             $msg = "No NuGet package found in the output directory. Check if the build process created the package correctly."
@@ -417,8 +418,8 @@ jobs:
             Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value $msg
             exit 0
           }          
-          if (-not (nuget sources list | Select-String -Pattern "${{ env.NUGET_SOURCE }}")) {
-            nuget sources add -name ${{ github.repository_owner }} -source ${{ env.NUGET_SOURCE }} -username pepperdash -password ${{ secrets.GITHUB_TOKEN }}
+          if (-not (nuget sources list | Select-String -Pattern "$env:NUGET_SOURCE")) {
+            nuget sources add -name ${{ github.repository_owner }} -source $env:NUGET_SOURCE -username pepperdash -password ${{ secrets.GITHUB_TOKEN }}
           }
           # Find the .nupkg file(s) in the output directory
           $nupkgFiles = Get-ChildItem -Path .\output\*.nupkg
@@ -429,7 +430,7 @@ jobs:
           Write-Output "Found the following .nupkg file(s) to push to GitHub feed:"
           $nupkgFiles | ForEach-Object { Write-Output $_.FullName }
 
-          nuget push .\output\*.nupkg -source ${{ env.NUGET_SOURCE }} -apikey ${{ secrets.GITHUB_TOKEN }}
+          nuget push .\output\*.nupkg -source $env:NUGET_SOURCE -apikey ${{ secrets.GITHUB_TOKEN }}
 
           Write-Output "Publishing ${{ github.repository }} to GitHub feed" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
 
