--- a/.github/workflows/essentialsplugins-4Series-builds.yml
+++ b/.github/workflows/essentialsplugins-4Series-builds.yml
@@ -129,7 +129,9 @@ jobs:
           if (-not (nuget sources list | Select-String -Pattern "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json")) {
             nuget sources add -name github -source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json -username pepperdash -password ${{ secrets.GITHUB_TOKEN }}
           }
-          nuget push .\output\*.nupkg -source github -apikey ${{ secrets.GITHUB_TOKEN }} 
+          Get-ChildItem -Path .\output -Recurse -Include *.cpz, *.cplz | ForEach-Object {
+            nuget push $_.FullName -source github -apikey ${{ secrets.GITHUB_TOKEN }}
+          }
           echo "GitHub Event: ${{ github.event }}" >> $GITHUB_STEP_SUMMARY
 
       # ---------------------------
@@ -159,7 +161,9 @@ jobs:
             
             Write-Output "Publishing ${{ github.repository }} to NuGet.org" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
             nuget setApiKey ${{ secrets.NUGET_API_KEY }} -Source https://api.nuget.org/v3/index.json
-            nuget push .\output\*.nupkg -Source https://api.nuget.org/v3/index.json
+            Get-ChildItem -Path .\output -Recurse -Include *.cpz, *.cplz | ForEach-Object {
+              nuget push $_.FullName -Source https://api.nuget.org/v3/index.json
+            }
           }
 
       
