--- a/.github/workflows/essentialsplugins-4Series-builds.yml
+++ b/.github/workflows/essentialsplugins-4Series-builds.yml
@@ -115,7 +115,7 @@ jobs:
 
       # ---------------------------
       - name: Clean up after failed build
-        if: failure() && steps.build.conclusion == 'failure'
+        if: failure()
         shell: powershell
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -134,20 +134,17 @@ jobs:
             Write-Output "Tag '${{ inputs.tag }}' does not exist on remote, skipping delete."
           }
           
-          # Delete all artifacts created during this workflow run
-          Write-Output "Deleting artifacts from workflow run..."
-          $artifactsJson = gh api repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts 2>&1
-          $artifacts = $artifactsJson | ConvertFrom-Json
-          
-          if ($artifacts.total_count -gt 0) {
-            foreach ($artifact in $artifacts.artifacts) {
-              Write-Output "Deleting artifact: $($artifact.name) (ID: $($artifact.id))"
-              gh api -X DELETE repos/${{ github.repository }}/actions/artifacts/$($artifact.id) 2>&1
-              Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value "Deleted artifact ``$($artifact.name)```n"
-            }
+          # Delete the release if it exists
+          Write-Output "Checking for release with tag '${{ inputs.tag }}'..."
+          $releaseJson = gh api repos/${{ github.repository }}/releases/tags/${{ inputs.tag }} 2>&1
+          if ($LASTEXITCODE -eq 0) {
+            $release = $releaseJson | ConvertFrom-Json
+            Write-Output "Deleting release: $($release.name) (ID: $($release.id))"
+            gh api -X DELETE repos/${{ github.repository }}/releases/$($release.id) 2>&1
+            Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value "Deleted release ``$($release.name)```n"
           }
           else {
-            Write-Output "No artifacts found for this workflow run."
+            Write-Output "No release found for tag '${{ inputs.tag }}', skipping delete."
           }
           
           exit 1
