--- a/.github/workflows/essentialsplugins-4Series-builds.yml
+++ b/.github/workflows/essentialsplugins-4Series-builds.yml
@@ -77,13 +77,13 @@ jobs:
           echo "SOLUTION_PATH=$($solution_path)" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append          
 
       # ---------------------------
-      - name: Setup MS Build
-        uses: microsoft/setup-msbuild@v1.1
+      # - name: Setup MS Build
+      #   uses: microsoft/setup-msbuild@v1.1
 
       # ---------------------------
-      - name: Restore Nuget Packages
-        # run: nuget restore .\${{ steps.get_sln_info.outputs.SOLUTION_FILE }}.sln
-        run: dotnet restore .\${{ steps.get_sln_info.outputs.SOLUTION_FILE }}.sln
+      # - name: Restore Nuget Packages
+      #   # run: nuget restore .\${{ steps.get_sln_info.outputs.SOLUTION_FILE }}.sln
+      #   run: dotnet restore .\${{ steps.get_sln_info.outputs.SOLUTION_FILE }}.sln
 
       # ---------------------------
       - name: Build Solution       
@@ -143,8 +143,12 @@ jobs:
           $tagExists = git ls-remote --tags origin "${{ inputs.tag }}" 2>&1
           if ($tagExists -match "${{ inputs.tag }}") {
             Write-Output "Deleting tag '${{ inputs.tag }}' from remote..."
-            git push origin --delete "${{ inputs.tag }}" 2>&1 | Out-String | Write-Output
-            if ($LASTEXITCODE -eq 0) {
+            $ErrorActionPreference = 'SilentlyContinue'
+            $output = git push origin --delete "${{ inputs.tag }}" 2>&1
+            $exitCode = $LASTEXITCODE
+            $ErrorActionPreference = 'Continue'
+            $output | Out-String | Write-Output
+            if ($exitCode -eq 0) {
               Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value "Deleted tag ``${{ inputs.tag }}`` from remote.`n"
             }
             else {
