--- a/.github/workflows/essentialsplugins-4Series-builds.yml
+++ b/.github/workflows/essentialsplugins-4Series-builds.yml
@@ -77,22 +77,13 @@ jobs:
           echo "SOLUTION_PATH=$($solution_path)" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append          
 
       # ---------------------------
-      # - name: Setup MS Build
-      #   uses: microsoft/setup-msbuild@v1.1
-
-      # ---------------------------
-      # - name: Restore Nuget Packages
-      #   # run: nuget restore .\${{ steps.get_sln_info.outputs.SOLUTION_FILE }}.sln
-      #   run: dotnet restore .\${{ steps.get_sln_info.outputs.SOLUTION_FILE }}.sln
-
-      # ---------------------------
       - name: Build Solution       
         id: build
         shell: powershell
         run: |
           Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value "## Build Solution`n"
           
-          # $buildOutput = msbuild .\${{ steps.get_sln_info.outputs.SOLUTION_FILE }}.sln /p:Platform="Any CPU" /p:Configuration="$($ENV:BUILD_TYPE)" /p:Version="${{ inputs.version }}" /p:IncludeSourceRevisionInInformationalVersion=false -m 2>&1
+          # updated msbuild to use dotnet build, which also inlcudes the dotnet restore step
           $buildOutput = dotnet build .\${{ steps.get_sln_info.outputs.SOLUTION_FILE }}.sln /p:Platform="Any CPU" /p:Configuration="$($ENV:BUILD_TYPE)" /p:Version="${{ inputs.version }}" /p:IncludeSourceRevisionInInformationalVersion=false -m 2>&1
 
           # Display output
